--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <video autoplay muted loop id="myvideo">
-            <source src="./vdo/vdoo.mp4" type="video/mp4">
+            <source src="vdo/vdoo.mp4" type="video/mp4">
         </video>    
     <div class="cnx">
         <nav>
